<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wpi.walkermagnet_inspection.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/magnet_controller_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@drawable/magnet" />

        <TextView
            android:id="@+id/magnet_controller_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Magnet Inspection One" />
    </LinearLayout>


    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/magnet_controller_image"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/configuration_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@drawable/select" />

        <TextView
            android:id="@+id/select_configuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/menu_select_configuration" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pair_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@drawable/bluetooth" />

        <TextView
            android:id="@+id/pair_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pair_device" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_magnet_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteMagnet"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/remove_device_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="20dp"
            android:src="@drawable/delete" />

        <TextView
            android:id="@+id/remove_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/delete_magnet" />

    </LinearLayout>

</LinearLayout>